# MLops_E38_F2

./: .env  .gitignore  Makefile  README.md  dvc.yaml  folderdisplay.py  mlflow.db  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
MLFlow/DVC/: __init__.py  cleaning.py  config.py  dataset.py  features.py  plots.py
MLFlow/DVC/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: .gitignore
src/: __init__.py
src/config/: config.py  dvc_setup.py
src/data/: __init__.py  clean_dataset.py  cleaning.py  dataset.py  download_dataset.py  features.py  preprocess_data.py
src/modeling/: __init__.py  plots.py  plots_model.py  predict.py  predict_model.py  train.py  train_model.py
src/utils/: __init__.py  cmd.py  paths.py
