[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MLFlow/DVC"
version = "0.0.1"
description = "Fase 2 Avance de Proyecto, Gestion del Proyecto de Machine Learning"
authors = [
  { name = "Equipo 38" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.7"


[tool.ruff]
line-length = 99
src = ["MLFlow/DVC"]
include = ["pyproject.toml", "MLFlow/DVC/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["MLFlow/DVC"]
force-sort-within-sections = true

